Bug 156834 - Crash when opening encrypted message
Summary: Crash when opening encrypted message
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: encryption (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-28 06:26 UTC by Oliver Putz
Modified: 2008-02-09 00:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Sample mail for crashing KMail with bug 156834 (see comment #1) (2.90 KB, application/mbox)
2008-01-28 13:52 UTC, Oliver Putz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Putz 2008-01-28 06:26:37 UTC
Version:           1.9.50 (using 4.00.80 (KDE 4.0.80 >= 20080104), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.23-gentoo-r3

Steps to reproduce:

1) Create a new message.
2) Encrypt that message. (OpenPGP)
3) Store the message in the queue for later sending (message is going to be encrypted now)
4) Double click on the message in your outbox
5) See KMail crash

There also is another problem with this bug: KMail does not just crash, the encrypted Mail is gone after the next reboot. So at least I also experience a data loss here.

I am running kdepimlibs r765208 and kdepim r765208.

Note: If I store the mail on my hard disk, I can easily open it directly with KMail. (-> "open with...")

The backtrace for this crash is:
Application: Kontact (kontact), signal SIGSEGV
[?1034hUsing host libthread_db library "/lib/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread 0xb534c6d0 (LWP 13057)]
[KCrash handler]
#5  0xb347fd58 in KMReaderWin::decryptMessage (this=0x0)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/kmreaderwin.cpp:2574
#6  0xb359eb2e in KMail::ObjectTreeParser::okDecryptMIME (this=0xbfe2b510, 
    data=@0x86030d8, decryptedData=@0xbfe2b2f8, signatureFound=@0xbfe2b31b, 
    sigMeta=@0xbfe2b2ac, showWarning=true, passphraseError=@0xbfe2b31a, 
    actuallyEncrypted=@0xbfe2b319, aErrorText=@0xbfe2b270)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/objecttreeparser.cpp:662
#7  0xb35a63ed in KMail::ObjectTreeParser::processMultiPartEncryptedSubtype (
    this=0xbfe2b510, node=0x8602fa8, result=@0xbfe2b3d8)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/objecttreeparser.cpp:1238
#8  0xb35a927b in (anonymous namespace)::MultiPartEncryptedBodyPartFormatter::process (this=0x83b01d8, otp=0xbfe2b510, node=0x8602fa8, result=@0xbfe2b3d8)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/bodypartformatter.cpp:121
#9  0xb359ff7e in KMail::ObjectTreeParser::parseObjectTree (this=0xbfe2b510, 
    node=0x8602fa8)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/objecttreeparser.cpp:284
#10 0xb345dd10 in KMComposeWin::setMsg (this=0x8300068, newMsg=0x843f250, 
    mayAutoSign=false, allowDecryption=true, isModified=false)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/kmcomposewin.cpp:1711
#11 0xb35c40f4 in KMEditMsgCommand::execute (this=0x8506f28)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/kmcommands.cpp:688
#12 0xb35c544d in KMCommand::slotPostTransfer (this=0x8506f28, 
    result=KMCommand::OK)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/kmcommands.cpp:270
#13 0xb35c58c6 in KMCommand::qt_metacall (this=0x8506f28, 
    _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0xbfe2bbfc)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim_build/kmail/kmcommands.moc:85
#14 0xb35c6572 in KMEditMsgCommand::qt_metacall (this=0x8506f28, 
    _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0xbfe2bbfc)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim_build/kmail/kmcommands.moc:532
#15 0xb7e981f4 in QMetaObject::activate (sender=0x8506f28, 
    from_signal_index=4, to_signal_index=4, argv=<value optimized out>)
    at kernel/qobject.cpp:3081
#16 0xb7e98d94 in QMetaObject::activate (sender=0x8506f28, m=0xb375c334, 
    local_signal_index=0, argv=0xbfe2bbfc) at kernel/qobject.cpp:3140
#17 0xb35b1a41 in KMCommand::messagesTransfered (this=0x8506f28, 
    _t1=KMCommand::OK)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim_build/kmail/kmcommands.moc:99
#18 0xb35c536b in KMCommand::transferSelectedMsgs (this=0x8506f28)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/kmcommands.cpp:364
#19 0xb35c5736 in KMCommand::slotStart (this=0x8506f28)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kmail/kmcommands.cpp:262
#20 0xb35c58ac in KMCommand::qt_metacall (this=0x8506f28, 
    _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0xbfe2c1f4)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim_build/kmail/kmcommands.moc:84
#21 0xb35c6572 in KMEditMsgCommand::qt_metacall (this=0x8506f28, 
    _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0xbfe2c1f4)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim_build/kmail/kmcommands.moc:532
#22 0xb7e981f4 in QMetaObject::activate (sender=0x8257710, 
    from_signal_index=4, to_signal_index=4, argv=<value optimized out>)
    at kernel/qobject.cpp:3081
#23 0xb7e98d94 in QMetaObject::activate (sender=0x8257710, m=0xb7f36c64, 
    local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3140
#24 0xb7ea13c3 in QSingleShotTimer::timeout (this=0x8257710)
    at .moc/debug-shared/qtimer.moc:73
#25 0xb7ea140c in QSingleShotTimer::timerEvent (this=0x8257710)
    at kernel/qtimer.cpp:296
#26 0xb7e96269 in QObject::event (this=0x8257710, e=0xb33edce9)
    at kernel/qobject.cpp:1086
#27 0xb6d56e8a in QApplicationPrivate::notify_helper (this=0x80601f8, 
    receiver=0x8257710, e=0xbfe2c728) at kernel/qapplication.cpp:3556
#28 0xb6d5877a in QApplication::notify (this=0xbfe2c9b0, receiver=0x8257710, 
    e=0xbfe2c728) at kernel/qapplication.cpp:3115
#29 0xb7a08cb3 in KApplication::notify (this=0xbfe2c9b0, receiver=0x8257710, 
    event=0xbfe2c728)
    at /var/tmp/portage/kde-base/kdelibs-9999.4/work/kdelibs-9999.4/kdeui/kernel/kapplication.cpp:314
#30 0xb7e84d7b in QCoreApplication::notifyInternal (this=0xbfe2c9b0, 
    receiver=0x8257710, event=0xbfe2c728) at kernel/qcoreapplication.cpp:530
#31 0xb7eadefb in QTimerInfoList::activateTimers (this=0x8060934)
    at kernel/qcoreapplication.h:200
#32 0xb7eadfd1 in QEventDispatcherUNIX::activateTimers (this=0x805b2f0)
    at kernel/qeventdispatcher_unix.cpp:828
#33 0xb7eae9ab in QEventDispatcherUNIX::processEvents (this=0x805b2f0, 
    flags=@0xbfe2c8a8) at kernel/qeventdispatcher_unix.cpp:890
#34 0xb6de0cce in QEventDispatcherX11::processEvents (this=0x805b2f0, 
    flags=@0xbfe2c8d4) at kernel/qeventdispatcher_x11.cpp:145
#35 0xb7e84191 in QEventLoop::processEvents (this=0xbfe2c940, 
    flags=@0xbfe2c908) at kernel/qeventloop.cpp:140
#36 0xb7e8429a in QEventLoop::exec (this=0xbfe2c940, flags=@0xbfe2c948)
    at kernel/qeventloop.cpp:186
#37 0xb7e86626 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:759
#38 0xb6d56487 in QApplication::exec () at kernel/qapplication.cpp:3053
#39 0x0804b3f5 in main (argc=1, argv=0xbfe2cb44)
    at /var/tmp/portage/kde-base/kdepim-9999.4/work/kdepim-9999.4/kontact/src/main.cpp:162
#40 0xb56cdfdc in __libc_start_main (main=0x804ab60 <main>, argc=1, 
    ubp_av=0xbfe2cb44, init=0x804c180 <__libc_csu_init>, 
    fini=0x804c170 <__libc_csu_fini>, rtld_fini=0xb7f48100 <_dl_fini>, 
    stack_end=0xbfe2cb3c) at libc-start.c:229
#41 0x0804a791 in _start ()
#0  0xffffe410 in __kernel_vsyscall ()
Comment 1 Oliver Putz 2008-01-28 13:50:04 UTC
Even though this bug should be easily reproducible, I'll attach a sample mail for the crash. Just open the mail from dolphin with KMail directly (works) and redirect it to someone. Do not send the email, but just put it in the outbox for sending it later. Then open KMail and double click on the new message in your outbox.
Comment 2 Oliver Putz 2008-01-28 13:52:45 UTC
Created attachment 23333 [details]
Sample mail for crashing KMail with bug 156834 (see comment #1)

"Import" this mail into your KMail outbox as described in comment #1 in order
to reproduce this bug.
Comment 3 Oliver Putz 2008-01-28 13:56:32 UTC
Additional note: You can crash KMail also by just opening the mail in KMail (as described in comment #1) and then try to reply to it, forward it (inline), or use other actions that open the mail.
Comment 4 Thomas McGuire 2008-02-05 16:04:51 UTC
Thanks, I can reproduce this as well.
Comment 5 Thomas McGuire 2008-02-09 00:01:54 UTC
SVN commit 772519 by tmcguire:

Don't crash when opening an encrypted message in the composer.

BUG: 156834



 M  +1 -1      objecttreeparser.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=772519