Don't crash when opening an encrypted message in the composer.

BUG: 156834


svn path=/trunk/KDE/kdepim/; revision=772519